// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockCard AcrylicBlockCard 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderRadius": 16,
        "paddingBottom": 27,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": 150,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "height": 40,
          "width": 40,
        },
        false,
        null,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
          false,
          Object {
            "flex": 0,
            "height": 40,
            "width": 40,
          },
        ]
      }
      vbHeight={1024}
      vbWidth={1024}
    >
      <RNSVGPath
        d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
        fill={
          Array [
            0,
            0.8274509803921568,
            0.8274509803921568,
            0.8274509803921568,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        propList={
          Array [
            "stroke",
            "strokeWidth",
            "fill",
          ]
        }
        stroke={
          Array [
            0,
            0.8274509803921568,
            0.8274509803921568,
            0.8274509803921568,
            1,
          ]
        }
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
      />
    </RNSVGSvgView>
  </View>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      Array [
        Array [
          Object {
            "marginBottom": 10,
            "marginTop": 28,
          },
          undefined,
        ],
        false,
      ]
    }
  >
    <View
      accessibilityLabel="SwitchButton"
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "height": 29,
          "justifyContent": "center",
          "opacity": 1,
          "width": 52,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 10,
              "height": 26,
              "justifyContent": "center",
              "width": 50,
            },
            Object {
              "backgroundColor": "#FE7862",
              "borderColor": "#FE7862",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFF",
            "borderRadius": 0.5,
            "height": 6,
            "justifyContent": "center",
            "left": 4.5,
            "position": "absolute",
            "width": 1,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFF",
            "borderRadius": 0.5,
            "height": 1.2000000000000002,
            "justifyContent": "center",
            "position": "absolute",
            "right": 4.5,
            "width": 1,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#fff",
            "borderRadius": 8.5,
            "elevation": 2,
            "height": 23,
            "justifyContent": "center",
            "position": "absolute",
            "shadowColor": "rgba(0, 0, 0, 0.3)",
            "shadowOffset": Object {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "transform": Array [
              Object {
                "translateX": 26.5,
              },
            ],
            "width": 23,
          }
        }
      />
    </View>
  </View>
  <Text
    accessible={true}
    align={null}
    allowFontScaling={false}
    color="#000"
    ellipsizeMode="tail"
    size={14}
    style={
      Array [
        false,
        Array [
          false,
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#000",
              "fontSize": 14,
              "fontWeight": "500",
            },
            Array [
              Object {
                "lineHeight": 19,
              },
              undefined,
            ],
          ],
        ],
      ]
    }
    text="Block Card"
    type={null}
    weight={500}
  >
    Block Card
  </Text>
</View>
`;

exports[`BlockCard ClassicBlockCard 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderRadius": 14,
        "paddingBottom": 20,
        "paddingLeft": 24,
        "paddingRight": 20,
        "paddingTop": 22,
        "width": 175,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-around",
        "marginBottom": 35,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "height": 22,
            "width": 22,
          },
          false,
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
            false,
            Object {
              "flex": 0,
              "height": 22,
              "width": 22,
            },
          ]
        }
        vbHeight={1024}
        vbWidth={1024}
      >
        <RNSVGPath
          d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
          fill={
            Array [
              0,
              0.8274509803921568,
              0.8274509803921568,
              0.8274509803921568,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "fill",
            ]
          }
          stroke={
            Array [
              0,
              0.8274509803921568,
              0.8274509803921568,
              0.8274509803921568,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
        />
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <View
      needsOffscreenAlphaCompositing={true}
      style={
        Array [
          undefined,
          false,
        ]
      }
    >
      <View
        accessibilityLabel="SwitchButton"
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "height": 27,
            "justifyContent": "center",
            "opacity": 1,
            "width": 42,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 13.285714285714286,
                "height": 24,
                "justifyContent": "center",
                "width": 40,
              },
              Object {
                "backgroundColor": "#1082FE",
                "borderColor": "#1082FE",
              },
            ]
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#fff",
              "borderRadius": 10,
              "elevation": 2,
              "height": 20,
              "justifyContent": "center",
              "position": "absolute",
              "shadowColor": "rgba(0, 0, 0, 0.3)",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 3,
              "transform": Array [
                Object {
                  "translateX": 19,
                },
              ],
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <Text
    accessible={true}
    align={null}
    allowFontScaling={false}
    color="#3D3D3D"
    ellipsizeMode="tail"
    size={15}
    style={
      Array [
        false,
        Array [
          false,
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#3D3D3D",
              "fontSize": 15,
              "fontWeight": "400",
            },
            Array [
              Object {
                "lineHeight": 24,
              },
              undefined,
            ],
          ],
        ],
      ]
    }
    text="Block Card"
    type={null}
    weight={400}
  >
    Block Card
  </Text>
</View>
`;

exports[`BlockCard NordicBlockCard 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderRadius": 16,
        "paddingBottom": 24,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 24,
        "width": 184,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    align={null}
    allowFontScaling={false}
    color="#000"
    ellipsizeMode="tail"
    size={16}
    style={
      Array [
        false,
        Array [
          false,
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#000",
              "fontSize": 16,
            },
            Array [
              Object {
                "lineHeight": 24,
                "marginBottom": 86,
              },
              undefined,
            ],
          ],
        ],
      ]
    }
    text="Block Card"
    type={null}
    weight={null}
  >
    Block Card
  </Text>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      Array [
        undefined,
        false,
      ]
    }
  >
    <View
      accessibilityLabel="SwitchButton"
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "height": 31,
          "justifyContent": "center",
          "opacity": 1,
          "width": 54,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 15.5,
              "height": 28,
              "justifyContent": "center",
              "width": 52,
            },
            Object {
              "backgroundColor": "#1082FE",
              "borderColor": "#1082FE",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#fff",
            "borderRadius": 10.4,
            "elevation": 2,
            "height": 20.8,
            "justifyContent": "center",
            "position": "absolute",
            "shadowColor": "rgba(0, 0, 0, 0.3)",
            "shadowOffset": Object {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "transform": Array [
              Object {
                "translateX": 27.9,
              },
            ],
            "width": 20.8,
          }
        }
      />
    </View>
  </View>
</View>
`;
